# ESP_DataCollector

./: .gitignore  README.md  keyGen.sh  poc.md
backend/: docker-compose.yml  pyTestOutside.py  sslkeylogfile.txt
backend/grafana/: Dockerfile  grafana.ini
backend/influxdb/: Dockerfile
backend/mosquitto/: Dockerfile
backend/mqttDocker/: Dockerfile  mosquitto.conf  runStuff.sh
backend/mqttDocker/certs/: ca.srl  client.csr  client.key  server.key
backend/mqtt_consumer/: Dockerfile  mqtt_to_influx.py
esp32/: .gitignore  CMakeLists.txt  buildesp.sh
esp32/main/: CMakeLists.txt  ca.crt  client.crt  dht11.c  fota.c  https.c  main.c  mqtt.c  nvStorage.c  settings.c  usb.c  wifi.c
esp32/main/include/: dht11.h  fota.h  mqtt.h  nvStorage.h  settings.h  usb.h  wifi.h
